@@ -53,6 +53,7 @@
   - `Identity.role`
   - `TaskConfig.environment`
   - `TaskConfig.jobName`
+  - `TaskQuery.owner`
 
 0.11.0
 ------
